feat: support sections and smoking tests
